# tinkoffInvest

./: .gitignore  CMakeLists.txt  README.md
include/: http.hpp  tinkoff.hpp  tinkoffApi.hpp
src/: http.cpp  main.cpp  tinkoff.cpp  tinkoffApi.cpp
